<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/fff"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_250"
            android:background="@color/fff">

            <!-- Cover Image -->

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_200"
                android:contentDescription="@string/cover_photo"
                android:scaleType="fitXY"
                android:src="@drawable/banner1" />

            <!-- Round Image -->

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="@dimen/dp_90"
                android:layout_height="@dimen/dp_90"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_75"
                android:src="@drawable/pro2"
                app:civ_border_width="@dimen/dp_2"
                app:civ_border_color="@color/ff0" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/fff"
            android:orientation="vertical">

            <com.example.deepanshu.singlescreenapp.customfonts.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/deepanshu_sinha"
                android:textColor="@color/title_color"
                android:textSize="@dimen/sp_22" />

            <com.example.deepanshu.singlescreenapp.customfonts.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/bengaluru_india"
                android:textColor="@color/title_color"
                android:textSize="@dimen/sp_14" />

            <com.example.deepanshu.singlescreenapp.customfonts.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/dash"
                android:textSize="@dimen/sp_14" />

            <com.example.deepanshu.singlescreenapp.customfonts.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/desc_1"
                android:textSize="@dimen/sp_14" />

            <com.example.deepanshu.singlescreenapp.customfonts.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/desc_2"
                android:textSize="@dimen/sp_14" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_30"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <com.example.deepanshu.singlescreenapp.customfonts.MyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/likes_value"
                    android:textColor="@color/title_color"
                    android:textSize="@dimen/sp_18"
                    android:textStyle="bold" />

                <com.example.deepanshu.singlescreenapp.customfonts.MyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/likes"
                    android:textSize="@dimen/sp_14" />

            </LinearLayout>

            <View
                android:layout_width="@dimen/dp_1"
                android:layout_height="@dimen/dp_60"
                android:background="@color/acacac" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <com.example.deepanshu.singlescreenapp.customfonts.MyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/followers_value"
                    android:textColor="@color/title_color"
                    android:textSize="@dimen/sp_18"
                    android:textStyle="bold" />

                <com.example.deepanshu.singlescreenapp.customfonts.MyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/followers"
                    android:textSize="@dimen/sp_14" />

            </LinearLayout>

            <View
                android:layout_width="@dimen/dp_1"
                android:layout_height="@dimen/dp_60"
                android:background="@color/acacac" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <com.example.deepanshu.singlescreenapp.customfonts.MyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/following_value"
                    android:textColor="@color/title_color"
                    android:textSize="@dimen/sp_18"
                    android:textStyle="bold" />

                <com.example.deepanshu.singlescreenapp.customfonts.MyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/following"
                    android:textSize="@dimen/sp_14" />

            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_24"
            android:layout_marginRight="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_30"
            android:background="@color/DBE2E8">

            <com.example.deepanshu.singlescreenapp.customfonts.MyTextView
                android:id="@+id/employer_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bussiness_name"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/image_view_phone"
                android:layout_width="@dimen/dp_24"
                android:layout_height="@dimen/dp_24"
                android:layout_below="@+id/employer_name"
                android:layout_marginTop="@dimen/dp_8"
                android:contentDescription="@string/icon_phone"
                android:scaleType="centerInside"
                android:src="@drawable/ic_call_black_24dp" />

            <com.example.deepanshu.singlescreenapp.customfonts.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/employer_name"
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_8"
                android:layout_toRightOf="@+id/image_view_phone"
                android:autoLink="phone"
                android:text="@string/phone_number"
                tools:ignore="RtlHardcoded" />

            <ImageView
                android:id="@+id/image_view_address"
                android:layout_width="@dimen/dp_24"
                android:layout_height="@dimen/dp_24"
                android:layout_below="@+id/image_view_phone"
                android:layout_marginTop="@dimen/dp_8"
                android:contentDescription="@string/icon_address"
                android:scaleType="centerInside"
                android:src="@drawable/ic_add_location_black_24dp" />

            <com.example.deepanshu.singlescreenapp.customfonts.MyTextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/image_view_phone"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="@dimen/dp_8"
                android:layout_toRightOf="@+id/image_view_address"
                android:text="@string/address"
                tools:ignore="RtlHardcoded" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_24"
            android:layout_marginRight="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_30"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <com.example.deepanshu.singlescreenapp.customfonts.MyTextView
                android:id="@+id/about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:textStyle="bold" />

            <com.example.deepanshu.singlescreenapp.customfonts.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:text="@string/description"
                android:textAlignment="center" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
